[package]
name = "csp_generator"
description = "Consume a JSON formatted list of domains and CSP directives and output a correctly formatted Content Security Policy string."
version = "0.2.0-rc"
authors = ["Rob Waller <rdwaller1984@gmail.com>"]
edition = "2018"
keywords = ["csp", "json", "content-security", "csp-generator", "security"]
license = "MIT"
homepage = "https://github.com/RobDWaller/csp-generator"
readme = "./README.md"
repository = "https://github.com/RobDWaller/csp-generator"

[lib]
bench = false
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"